--- a/06_Paper/ER-ED/Manuscript_ERED_Stage1.tex
+++ b/06_Paper/ER-ED/Manuscript_ERED_Stage1.tex
@@ -258,12 +258,14 @@ We assume that people choose the strategy that has the highest value for them at
 The value is determined against the background of goal achievement in the specific situation: A strategy is highly valued if it facilitates goal achievement\textsuperscript{12}.
 One certainly central goal is the regulation of negative affect.
 A second, intrinsic and less obvious goal is the avoidance of effort\textsuperscript{23}.
-When given the choice, most individuals prefer tasks that are less effortful\textsuperscript{24}.
+When given the choice, most individuals prefer tasks that are less effortful\textsuperscript{24} and chose strategies that were less effortful\textsuperscript{22}.
 We assume that both aspects are traded off against each other by individuals to determine individual subjective values (SVs) of ER strategies: A strategy is more valuable if it can reduce emotional arousal \emph{and} is less effortful.
-SVs of ER Strategies could therefore be helpful to describe the ER repertoire\textsuperscript{12} more comprehensively.
+In addition, perceived utility should have an impact on SVs.
+A strategy that is less effortful and can objectively regulate arousal (i.e., is effective), but is not subjectively perceived as useful, should have a low SV.
+Moreover, SVs of ER Strategies could therefore be helpful to describe the ER repertoire\textsuperscript{12} more comprehensively.
 Depending on the flexibility of a person, different patterns of SVs could be conceivable: A person with high flexibility would show relatively high SVs for a number of strategies.
 This would mean that all strategies are a good option for goal achievement.
-A second person with less flexibility, however, would show high SVs only for one or very few strategies.
+A second person with less flexibility, however, would show high SVs only for only one strategy or low SVs for all of the strategies.
 This in turn would mean that there is only a limited amount of strategies in the repertoire to choose from.
 Subsequently, the ability to choose an appropriate strategy for a specific situation is also limited.
 
@@ -293,56 +295,16 @@ Then no SV will be 1, but still, the SVs of all strategies can be interpreted as
 In a separate study, we will test our adapted paradigm together with a \emph{n}-back task and explore whether this paradigm can describe individuals that do not prefer the easiest \emph{n}-back option (see Zerna et al.\textsuperscript{26}).
 
 \begin{figure}
-\includegraphics[width=\textwidth]{C:/Users/scheffel/Scheffel/Forschung/A_Projects/2021_CERED/CERED/06_Paper/ER-ED/figures/Paradigm_Scheme_T2} \caption{Exemplary visualization of two response patterns. In the top half, the person has a clear preference for one of the three strategies. In the lower half, they have no clear preference and therefore show an inconsistent response pattern. This pattern can be represented by our paradigm.}\label{fig:ResponsePatterns}
+\includegraphics[width=\textwidth]{C:/Users/scheffel/Scheffel/Forschung/A_Projects/2021_CERED/CAD/06_Paper/ER-ED/figures/Paradigm_Scheme_T2} \caption{Exemplary visualization of two response patterns. In the top half, the person has a clear preference for one of the three strategies. In the lower half, they have no clear preference and therefore show an inconsistent response pattern. This pattern can be represented by our paradigm.}\label{fig:ResponsePatterns}
 \end{figure}
 
 The aim of the present study is to evaluate whether this paradigm is suitable for determining SVs of ER strategies.
-As a manipulation check, we first want to investigate whether the valence of the pictures (neutral, negative) is effecting subjective and physiological responding (EMG).
-Second, we want to check whether the ER strategies distraction, distancing, and suppression effectively reduce subjective and physiological responding as well as, third, whether they require cognitive effort.
-The following hypotheses are proposed:
-
-\begin{itemize}
-\item
-  H1a) Subjective arousal is lower after actively viewing neutral pictures compared to actively viewing negative pictures.
-\item
-  H1b) Physiological responding (EMG \emph{corrugator} and \emph{levator} activity) is lower while actively viewing neutral pictures compared to actively viewing negative pictures.
-\item
-  H2a) Subjective arousal (arousal rating) is lower after using an ER strategy (distraction, distancing, suppression) compared to active viewing.
-\item
-  H3a) Physiological responding (EMG \emph{corrugator} activity) is lower while using an ER strategy (distraction, distancing, suppression) compared to active viewing.
-\item
-  H3b) Physiological responding (EMG \emph{levator} activity) is lower while using an ER strategy (distraction, distancing, suppression) compared to active viewing.
-\item
-  H4a) Subjective effort (effort rating) is greater after using an ER strategy (distraction, distancing, suppression) compared to active viewing.
-\item
-  H5b) The majority of participants re-uses the strategy that was least effortful for them.
-\end{itemize}
-
-Furthermore, we want to investigate whether the following variables predict individual subjective values of ER strategies and whether effort is the best predictor for SVs of ER strategies with the following hypotheses:
-
-\begin{itemize}
-\item
-  H5a) Subjective effort (effort ratings) negatively predicts SVs of ER strategies.
-\item
-  H5b) Subjective arousal (arousal ratings) negatively predicts SVs of ER strategies.
-\item
-  H5c) Physiological responding (EMG \emph{corrugator} activity) negatively predicts SVs of ER strategies.
-\item
-  H5d) Physiological responding (EMG \emph{levator} activity) negatively predicts SVs of ER strategies.
-\item
-  H6a) SVs decline with increasing effort, even after controlling for task performance (subjective arousal ratings), and physiological responding (EMF \emph{corrugator} and \emph{levator} activity).
-\end{itemize}
-
-We also want to investigate whether SVs are related to flexible emotion regulation:
-
-\begin{itemize}
-\tightlist
-\item
-  H7a) The higher the SV, the more likely the respective strategy is chosen.
-\item
-  H7b) SVs are lower and decline stronger when ER flexibility is lower.
-\end{itemize}
-
+As a manipulation check, we first want to investigate whether the valence of the pictures is affecting subjective and physiological responding, resulting in lower subjective arousal ratings after and lower EMG activity during neutral compared to negative pictures.
+Second, we want to check whether the ER strategies distraction, distancing, and suppression effectively reduce subjective arousal and physiological responding compared to the active viewing condition.
+Third, we want to see whether the strategies subjectively require more cognitive effort than the active viewing condition, and whether participants re-apply the for them least effortful strategy.
+Furthermore, we want to investigate whether subjective effort, arousal ratings, subjective utility, and EMG activity predict individual subjective values of ER strategies.
+And lastly, we want to check whether the SV of a strategy is associated with its likelihood of being chosen again, and whether SVs reflect participants' self-reported ER flexibility.
+All hypotheses are detailed in the \protect\hyperlink{DesignTable}{design table}.
 Exploratorily, we want to investigate whether individual SVs are related to personality traits and how individual SVs of ER strategies relate to SVs of other tasks with different demand levels, namely \emph{n}-back.
 
 \hypertarget{method}{%
@@ -379,21 +341,27 @@ Participants will be excluded from participation if they do not fluently speak G
 Participants will be invited to complete an online survey containing different questionnaires to assess broad and narrow personality traits and measures of well-being.
 The study consists of two lab sessions, which will take place in a shielded cabin with constant lighting.
 Before each session, participants will receive information about the respective experimental procedure and provide informed consent.
-At the beginning of the first session participants will fill out a demographic questionnaire and complete an n-back task with the levels one to four.
-Then, they will complete an effort discounting (ED) procedure on screen, followed by a random repetition of one n-back level.
-The second session will comprise the ER paradigm and take place exactly one week after session one.
+In the first session participants will fill out a demographic questionnaire and complete an n-back task with the levels one to four.
+Then, they will complete an effort discounting (ED) procedure regarding the n-back levels on screen, followed by a random repetition of one n-back level.
+The second session will take place exactly one week after session one.
 Participants will provide informed consent and receive written instructions on the ER paradigm and ER strategies that they should apply.
 A brief training will ensure that all participants are able to implement the ER strategies.
-Next, electrodes to measure facial EMG will be attached and the ER paradigm will be conducted.
+Next, electrodes to measure facial EMG will be attached and the ER paradigm will be conducted, followed by an ED procedure regarding the ER strategies.
+After that, participants will choose one ER strategy to repeat one more time.
 Study data will be collected and managed using REDCap electronic data capture tools hosted at Technische Universität Dresden\textsuperscript{34,35}.
 
 \hypertarget{psychometric-measures}{%
 \subsubsection{2.3.1 Psychometric measures}\label{psychometric-measures}}
 
-The online survey will contain a number of questionnaires: General psychological well-being will be assessed using the German version of the WHO-5 scale\textsuperscript{36,37}.
-To measure resilience, the German version 10-item-form of the Connor-Davidson resilience Scale (CD-RISC)\textsuperscript{40} will be used.
-Habitual use of ER will be assessed using the German version of the Emotion Regulation Questionnaire (ERQ)\textsuperscript{9,41}.
-For the assessment of ER flexibility we will use the Flexible Emotion Regulation Scale (FlexER)\textsuperscript{42}.
+The online survey will contain a number of questionnaires.
+In the focus of the current project is the Flexible Emotion Regulation Scale (FlexER)\textsuperscript{36}.\\
+It assess flexible use of ER strategies with items such as ``If I want to feel less negative emotions, I have several strategies to achieve this.'', which we define as ER flexibility.
+The items are rated on a 4-point scale ranging from ``strongly agree'' to ``strongly disagree''.
+
+Further psychological constructs will be assessed but have no clear hypothesies in the present work an are therefore investigated only exploratory:
+General psychological well-being will be assessed using the German version of the WHO-5 scale\textsuperscript{37,38}.
+To measure resilience, the German version 10-item-form of the Connor-Davidson resilience Scale (CD-RISC)\textsuperscript{41} will be used.
+Habitual use of ER will be assessed using the German version of the Emotion Regulation Questionnaire (ERQ)\textsuperscript{9,42}.
 Implicit theories of willpower in emotion control will be assessed using the implicit theories questionnaire from Bernecker and Job\textsuperscript{43}.
 To assess Need for Cognition, the German version short form of the Need for Cognition Scale\textsuperscript{44,45} will be used.
 To assess self-control,\textsuperscript{46} sum scores of the German versions of the following questionnaires will be used: the Self-Regulation Scale (SRS)\textsuperscript{47}, the Brief Self-Control Scale (BSCS)\textsuperscript{48,49}, and the Barratt Impulsiveness Scale (BIS-11)\textsuperscript{50,51}.
@@ -424,16 +392,21 @@ The order of the three regulation blocks (distraction, distancing, and suppressi
 Each of the blocks consisted of 20 trials showing neutral (Block 1) and negative (Blocks 2, 3, 4, 5) pictures.
 Each trial began with a fixation cross that lasted 3 to 5 seconds (random uniform distributed).
 It was followed by neutral or negative picture for a total of 6 seconds.
-After each block, participants retrospectively rated their subjective emotional arousal on a continous scale (ranging from ``not at all aroused'' to ``very highly aroused'') and their subjective effort (ranging from ``not very exhausting'' to ``very exhausting'') using a slider on screen.
+After each block, participants retrospectively rated their subjective emotional arousal (``not at all aroused'' to ``very highly aroused''), their subjective effort (``not very exhausting'' to ``very exhausting''), and - after the ragulation blocks - the utility of the respective strategy (``not useful at all'' to ``very useful'') on a continuous scale using a slider on screen.
 
 \emph{Part two: ER effort discounting.} In the second part, ER effort discounting will take place.
 The procedure of the discounting will follow the COG-ED paradigm by Westbrook et al.\textsuperscript{25} with a major change.
-We will use the following adaption that allows the computation of SVs for different strategies without presuming that all individuals would inherently evaluate the same strategy as the easiest one: For each possible pairing (distraction vs.~distancing, distraction vs.~suppression, and distancing vs.~suppression), two strategies with monetary values will be presented.
-The order of the comparisons will be randomized.
+We will use the following adaption that allows the computation of SVs for different strategies without presuming that all individuals would inherently evaluate the same strategy as the easiest one: For each possible pairing (distraction vs.~distancing, distraction vs.~suppression, and distancing vs.~suppression), each of the two strategies will be presented with a monetary reward.
+The order of the pairings will be randomized.
 Because there is no strategy that is objectively more difficult, we will add an initial comparison that begins with the option ``1 € for strategy A or 1 € for strategy B''.
-The strategy that is not chosen will be assigned the value of 2 €.
+The participants decide by clicking the on-screen button of the respective option.
+The strategy that is not chosen will be assigned the fixed value of 2 €, the chosen strategy will be assigned a starting value of 1 €.
 From this point on, comparisons between strategies will follow the original COG-ED paradigm\textsuperscript{25}.
-Participants will be instructed to decide as realistically as possible by imagining that the money displayed is actually available for choice.
+Each pairing is presented six consecutive times, and with each decision the reward of the strategy with the starting value of 1 € is either lowered (if this strategy was chosen) or raised (if the strategy with the fixed 2 € reward was chosen).
+The adjustment starts at 0.50 € and each is half the adjustment of the previous step, rounded to two digits after the decimal point.
+If a participant always chooses the strategy with the fixed 2 € reward, the other strategy's last value on display will be 1.97 €, if they always choose the lower strategy, its last value will be 0.03 €.
+The sixth adjustment of 0.02 € will be done during data analysis, based on the participants' decision in the last display of the pairing.
+Participants will be instructed to decide as realistically as possible by imagining that the monetary reward is actually available for choice.
 
 \emph{Part three: ER choice.} After the discounting part, participants will choose which of the three ER strategies (distraction, distancing or suppression) they want to re-apply.
 Importantly, there will be no further instruction on what basis they should make their decision.
@@ -442,7 +415,7 @@ However, participants will be asked to state the reasons for the decision afterw
 As soon as they have decided, they will see the respective instruction and the block with another 20 negative pictures starts.
 
 \begin{figure}
-\includegraphics[width=\textwidth]{C:/Users/scheffel/Scheffel/Forschung/A_Projects/2021_CERED/CERED/06_Paper/ER-ED/figures/Design_ER-ED} \caption{Block design of the paradigm. Every participant starts with two "active viewing" blocks continaing neutral (Block 1) and negative (Block 2) pictures. Order of the regulation blocks (Blocks 3, 4, and 5) is randomized between participants. After, the discounting procedure takes place. All three regulation strategies are pairwise compared. Before the last block, participants can decide which regulation strategy they want to reapply. Subjective arousal and effort ratings are assessed after each block using a slider on screen with a continuous scale.}\label{fig:DesignERED}
+\includegraphics[width=\textwidth]{C:/Users/scheffel/Scheffel/Forschung/A_Projects/2021_CERED/CAD/06_Paper/ER-ED/figures/Design_ER-ED} \caption{Block design of the paradigm. Every participant starts with two "active viewing" blocks continaing neutral (Block 1) and negative (Block 2) pictures. Order of the regulation blocks (Blocks 3, 4, and 5) is randomized between participants. After, the discounting procedure takes place. All three regulation strategies are pairwise compared. Before the last block, participants can decide which regulation strategy they want to reapply. Subjective arousal and effort ratings are assessed after each block using a slider on screen with a continuous scale.}\label{fig:DesignERED}
 \end{figure}
 
 \hypertarget{stimuli}{%
@@ -453,6 +426,7 @@ The 20 neutral pictures (Valence (V): \emph{M} \(\pm\) \emph{SD} = 4.81 \(\pm\) 
 Further, 100 negative pictures, featuring categories animals, body, disaster, disgust, injury, suffering, violence, and weapons, will be used.
 An evolutionary algorithm\textsuperscript{55} is used to cluster these pictures into five sets with comparable valence and arousal values (set one: V: \emph{M} \(\pm\) \emph{SD} = 2.84 \(\pm\) 0.57, A: \emph{M} \(\pm\) \emph{SD} = 5.62 \(\pm\) 0.34; set two: V: \emph{M} \(\pm\) \emph{SD} = 2.64 \(\pm\) 0.46, A: \emph{M} \(\pm\) \emph{SD} = 5.58 \(\pm\) 0.35; set three: V: \emph{M} \(\pm\) \emph{SD} = 2.82 \(\pm\) 0.62, A: \emph{M} \(\pm\) \emph{SD} = 5.60 \(\pm\) 0.39; set four: V: \emph{M} \(\pm\) \emph{SD} = 2.65 \(\pm\) 0.75, A: \emph{M} \(\pm\) \emph{SD} = 5.61 \(\pm\) 0.41; set five: V: \emph{M} \(\pm\) \emph{SD} = 2.74 \(\pm\) 0.70, A: \emph{M} \(\pm\) \emph{SD} = 5.63 \(\pm\) 0.37).
 A complete list of all pictures and their classification into sets can be found in supplementary material 1.
+The five sets of negative pictures will be assigned randomly to the blocks.
 
 \hypertarget{facial-electromyography}{%
 \subsubsection{2.3.4 Facial electromyography}\label{facial-electromyography}}
@@ -504,38 +478,38 @@ To investigate the effects of the three ER strategies on subjective arousal (H2a
 
 To examine the effects of the three ER strategies on physiological responding (H3a and H3b), another rmANOVA with the factor strategy (active viewing - negative, distraction, distancing, and suppression) for EMG \emph{corrugator} and \emph{levator} activity will be conducted.
 
-To examine the effect of ER strategies on subjective effort, a rmANOVA with the factor strategy (active viewing, distraction, distancing, and suppression) for subjective effort ratings will be conducted.
+To examine the effect of ER strategies on subjective effort (H4a), a rmANOVA with the factor strategy (active viewing, distraction, distancing, and suppression) for subjective effort ratings will be conducted.
 Greenhouse-Geisser-corrected \(p\)-values and degrees of freedom will be reported when the assumption of sphericity is violated.
 Proportion of explained variance \(\eta_{p}^{2}\) will be reported as a measure of effect size.
 If indicated by the data, estimated marginal means will be computed as post-hoc contrasts.
 rmANOVAS will be run using the \emph{afex} package\textsuperscript{31}.
 
-\emph{Subjective values of emotion regulation strategies.} For each ER strategy, SVs will be calculated as follows: first, the value 0.015625 will be added to or subtracted from the last monetary value of the flexible strategy, depending on the participant's last choice.
-Second, the resulting (monetary) value will be divided by 2.00 €.
-The final SV for each participant will be computed by averaging all final SVs of each strategy.
-The resulting values will be entered in a rmANOVA to compare the SVs of the three strategies (distraction, distancing, and suppression) and explore group effects.
-Again, estimated marginal means will be computed as post-hoc contrasts.
+\emph{Subjective values of emotion regulation strategies.} For each ER strategy, SVs will be calculated as follows: first, the value 0.02 € will be added to or subtracted from the last monetary value of the flexible strategy, depending on the participant's last choice.
+Second, the resulting monetary value will be divided by 2.00 € to arrive at the SV of the opposite strategy in each pairing.
+Therefore, the SVs of the flexible strategies are 1, because they were chosen in the initial comparison of each pairing in which the same value was offered for both strategies, so they are the preferred strategy of each pairing.
+The SVs of the fixed strategies lay between 0 and 1, with lower values indicating that the participant would need a much higher monetary incentive to choose this strategy over the other one in the pairing.
+The final SV per strategy for each participant will be computed by averaging the SVs of each strategy across pairings.
 
-To investigate whether individual SVs predict ER choice, a Chi-squared test with predicted choice (highest SV of each participant) and actual choice will be computed.
-Furthermore, an ordinal logistic regression with the dependent variable choice and independent variables SVs of each strategy will be computed.
-
-To explore the association between subjective arousal, physiological responses, and subjective effort on SVs, a multilevel model (MLM) will be specified using the \(lmerTest\) package\textsuperscript{60}.
+To explore the association between subjective effort (H5a), subjective arousal (H5b), subjective utility (H5c), and physiological responding (H5d,e) on SVs, a multilevel model (MLM) will be specified using the \(lmerTest\) package\textsuperscript{60}.
 First, ER strategies will be recoded and centered for each subject according to their individual SVs: The strategy with the highest SV will be coded as -1, the strategy with the second highest SV 0, and the strategy with the lowest SV will be coded as 1.
 Restricted maximum likelihood (REML) will be applied to fit the model.
 A random slopes model of SVs including subjective effort (effort ratings), subjective arousal (arousal ratings), and physiological responses (\emph{corrugator} and \emph{levator} activity) as level-1-predictors will be specified.
 \[
-SV \sim strategy\ + \text{effort rating} + \text{arousal rating} + corrugator \text{ activity} + levator \text{ activity} + (strategy|subject)
+SV \sim strategy\ + \text{effort rating} + \text{arousal rating} + \text{utility} + corrugator \text{ activity} + levator \text{ activity} + (strategy|subject)
 \]
 Level-1-predictors will be centered within cluster\textsuperscript{61}.
 Residuals of the final model will be inspected visually.
 Intraclass correlation coefficient (ICC), \(\rho\), will be reported for each model (null model, as well as full model).
 
-The influence of personality traits on SVs will be investigated exploratorily.
-Therefore, the MLM specified above will be extended by the level-2-predictors NFC and self-control.
+To investigate whether individual SVs predict ER choice (H7a), a Chi-squared test with predicted choice (highest SV of each participant) and actual choice will be computed.
+Furthermore, an ordinal logistic regression with the dependent variable choice and independent variables SVs of each strategy will be computed.
 
-The association between flexible ER and SVs of ER strategies will be investigated with a regression using the \(intercept\) and \(slope\) of each participants' SVs to predict their FlexER score.
+The association between flexible ER and SVs of ER strategies (H7b) will be investigated with a regression using the \(intercept\) and \(slope\) of each participants' SVs to predict their FlexER score.
 Firstly, SVs will be ordered by magnitude.
 Secondly, for each participant a linear model will be built to estimate the individual \(intercept\) and \(slope\).
+
+The influence of personality traits on SVs will be investigated exploratorily.
+Therefore, the MLM specified above will be extended by the level-2-predictors NFC and self-control.
 
 For each result of the analyses, both \(p\)-values and Bayes factors \(BF10\), calculated using the \emph{BayesFactor} package\textsuperscript{32}, will be reported.
 Bayes factors are calculated using the default prior widths of the functions \emph{anovaBF}, \emph{lmBF} and \emph{regressionBF}.
@@ -699,33 +673,33 @@ The paradigm code, as well as the R Markdown file used to analyze the data and w
 \CSLLeftMargin{35. }
 \CSLRightInline{Harris, P. A. \emph{et al.} The {REDCap} consortium: {Building} an international community of software platform partners. \emph{Journal of Biomedical Informatics} \textbf{95}, 103208 (2019).}
 
-\leavevmode\hypertarget{ref-Bech2004}{}%
+\leavevmode\hypertarget{ref-Doerfel2019}{}%
 \CSLLeftMargin{36. }
+\CSLRightInline{Dörfel, D., Gärtner, A. \& Strobel, A. A new self-report instrument for measuring emotion regulation flexibility. \emph{Society for Affective Science (SAS) Annual Conference} (2019).}
+
+\leavevmode\hypertarget{ref-Bech2004}{}%
+\CSLLeftMargin{37. }
 \CSLRightInline{Bech, P. Measuring the dimensions of psychological general well-being by the WHO-5. \emph{Quality of life newsletter} \textbf{32}, 15--16 (2004).}
 
 \leavevmode\hypertarget{ref-Braehler2007}{}%
-\CSLLeftMargin{37. }
+\CSLLeftMargin{38. }
 \CSLRightInline{Brähler, E., Mühlan, H., Albani, C. \& Schmidt, S. Teststatistische pr{ü}fung und normierung der deutschen versionen des EUROHIS-QOL lebensqualit{ä}t-index und des WHO-5 wohlbefindens-index. \emph{Diagnostica} \textbf{53}, 83--96 (2007).}
 
 \leavevmode\hypertarget{ref-Connor2003}{}%
-\CSLLeftMargin{38. }
+\CSLLeftMargin{39. }
 \CSLRightInline{Connor, K. M. \& Davidson, J. R. Development of a new resilience scale: The connor-davidson resilience scale (CD-RISC). \emph{Depression and Anxiety} \textbf{18}, 76--82 (2003).}
 
 \leavevmode\hypertarget{ref-Sarubin2015}{}%
-\CSLLeftMargin{39. }
+\CSLLeftMargin{40. }
 \CSLRightInline{Sarubin, N. \emph{et al.} First analysis of the 10-and 25-item german version of the connor-davidson resilience scale (CD-RISC) regarding psychometric properties and components. \emph{Zeitschrift Fur Gesundheitspsychologie} \textbf{23}, 112--122 (2015).}
 
 \leavevmode\hypertarget{ref-Campbell-Sills2007}{}%
-\CSLLeftMargin{40. }
+\CSLLeftMargin{41. }
 \CSLRightInline{Campbell-Sills, L. \& Stein, M. B. Psychometric analysis and refinement of the connor-davidson resilience scale (CD-RISC): Validation of a 10-item measure of resilience. \emph{Journal of Traumatic Stress} \textbf{20}, 1019--28 (2007).}
 
 \leavevmode\hypertarget{ref-Abler2009}{}%
-\CSLLeftMargin{41. }
-\CSLRightInline{Abler, B. \& Kessler, H. Emotion regulation questionnaire - a german version of the ERQ by gross and john. \emph{Diagnostica} \textbf{55}, 144--152 (2009).}
-
-\leavevmode\hypertarget{ref-Doerfel2019}{}%
 \CSLLeftMargin{42. }
-\CSLRightInline{Dörfel, D., Gärtner, A. \& Strobel, A. A new self-report instrument for measuring emotion regulation flexibility. \emph{Society for Affective Science (SAS) Annual Conference} (2019).}
+\CSLRightInline{Abler, B. \& Kessler, H. Emotion regulation questionnaire - a german version of the ERQ by gross and john. \emph{Diagnostica} \textbf{55}, 144--152 (2009).}
 
 \leavevmode\hypertarget{ref-Bernecker2017}{}%
 \CSLLeftMargin{43. }
@@ -843,7 +817,7 @@ The authors declare no competing interests.
 
 \newpage
 \begin{figure}
-\includegraphics[width=\textwidth]{C:/Users/scheffel/Scheffel/Forschung/A_Projects/2021_CERED/CERED/06_Paper/ER-ED/figures/Paradigm_Scheme_T2} \caption{ }\label{fig:ResponsePatternsAppendix}
+\includegraphics[width=\textwidth]{C:/Users/scheffel/Scheffel/Forschung/A_Projects/2021_CERED/CAD/06_Paper/ER-ED/figures/Paradigm_Scheme_T2} \caption{ }\label{fig:ResponsePatternsAppendix}
 \end{figure}
 
 \emph{Figure 1.}
@@ -853,7 +827,7 @@ In the lower half, they have no clear preference and therefore show an inconsist
 This pattern can also be represented by our paradigm.
 
 \begin{figure}[H]
-\includegraphics[width=\textwidth]{C:/Users/scheffel/Scheffel/Forschung/A_Projects/2021_CERED/CERED/06_Paper/ER-ED/figures/Design_ER-ED} \caption{ }\label{fig:DesignEREDappendix}
+\includegraphics[width=\textwidth]{C:/Users/scheffel/Scheffel/Forschung/A_Projects/2021_CERED/CAD/06_Paper/ER-ED/figures/Design_ER-ED} \caption{ }\label{fig:DesignEREDappendix}
 \end{figure}
 
 \emph{Figure 2.}
@@ -881,21 +855,21 @@ Subjective arousal and effort ratings are assessed after each block using a slid
 \subsection{Detailed information on psychometric measures}\label{SupplementQuestionnaires}}
 
 \emph{WHO-5.}
-General psychological well-being is assessed using the WHO-5 scale\textsuperscript{36,37}.
+General psychological well-being is assessed using the WHO-5 scale\textsuperscript{37,38}.
 5 Items such as ``Over the past 2 weeks I have felt calm and relaxed.'' are rated on a 6-point Likert scale raning from 0 (at no time) to 5 (all of the time).
-The german version of the scale showed a high internal consistency (Cronbach's \(\alpha=.92\))\textsuperscript{37}.
+The german version of the scale showed a high internal consistency (Cronbach's \(\alpha=.92\))\textsuperscript{38}.
 
 \emph{Connor-Davidson Resilience Scale.}
-Resilience is assessed using the Connor-Davidson Resilience Scale (CD-RISC)\textsuperscript{38--40}.
+Resilience is assessed using the Connor-Davidson Resilience Scale (CD-RISC)\textsuperscript{39--41}.
 10 items such as ``I am able to adapt to change.'' are rated on a scale from 0 (not true at all) to 4 (true nearly all the time).
-The 10-item version showed a high internal consistency (Cronbach's \(\alpha=.84\)) and a satisfactory retest-reliability of \(r_{tt}=.81\) across 6 month\textsuperscript{39}.
+The 10-item version showed a high internal consistency (Cronbach's \(\alpha=.84\)) and a satisfactory retest-reliability of \(r_{tt}=.81\) across 6 month\textsuperscript{40}.
 
 \emph{Emotion Regulation Questionnaire.}
-Habitual use of reappraisal and suppression is measured using the 10-item Emotion Regulation Questionnaire (ERQ)\textsuperscript{9,41}.
+Habitual use of reappraisal and suppression is measured using the 10-item Emotion Regulation Questionnaire (ERQ)\textsuperscript{9,42}.
 The scale has items such as ``I keep my emotions to myself'' (ERQ-suppression - 4 items) and ``When I'm faced with a stressful situation, I make myself think about it in a way that helps me stay calm'' (ERQ-reappraisal - 6 items), which are answered on a 7-point Likert scale ranging from 1 (strongly disagree) to 7 (strongly agree), and has acceptable to high internal consistency (Cronbach's \(\alpha>.75\)).\textsuperscript{62}
 
 \emph{FlexER Scale.}
-Flexible use of ER strategies is assessed using the FlexER Scale\textsuperscript{42} with items such as ``If I want to feel less negative emotions, I have several strategies to achieve this.'', which are answered on a 4-point scale ranging from ``strongly agree'' to ``strongly disagree''.
+Flexible use of ER strategies is assessed using the FlexER Scale\textsuperscript{36} with items such as ``If I want to feel less negative emotions, I have several strategies to achieve this.'', which are answered on a 4-point scale ranging from ``strongly agree'' to ``strongly disagree''.
 Psychometric properties are currently under investigation.
 
 \emph{Implicit Theories Questionnaire.}
