--- a/06_Paper/ER-ED/TheoreticalBackground.Rmd
+++ b/06_Paper/ER-ED/TheoreticalBackground.Rmd
@@ -13,7 +13,7 @@ library(here)       # to set directories without defined paths
 library(papaja)     # APA conform output
 
 # set top level directory to source file
-here::i_am("flag_project_root_CERED.txt")
+here::i_am("flag_project_root_CAD.txt")
 ```
 
 # 1. Introduction
@@ -74,7 +74,7 @@ A strategy that is less effortful and can objectively regulate arousal (i.e., is
 Moreover, SVs of ER Strategies could therefore be helpful to describe the ER repertoire[@Aldao2015] more comprehensively.
 Depending on the flexibility of a person, different patterns of SVs could be conceivable: A person with high flexibility would show relatively high SVs for a number of strategies.
 This would mean that all strategies are a good option for goal achievement.
-A second person with less flexibility, however, would show high SVs only for one or very few strategies.
+A second person with less flexibility, however, would show high SVs only for only one strategy or low SVs for all of the strategies.
 This in turn would mean that there is only a limited amount of strategies in the repertoire to choose from. 
 Subsequently, the ability to choose an appropriate strategy for a specific situation is also limited.
 
@@ -104,14 +104,14 @@ Then no SV will be 1, but still, the SVs of all strategies can be interpreted as
 In a separate study, we will test our adapted paradigm together with a *n*-back task and explore whether this paradigm can describe individuals that do not prefer the easiest *n*-back option (see Zerna et al.[@Zerna2022]).
 
 ```{r ResponsePatterns, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Exemplary visualization of two response patterns. In the top half, the person has a clear preference for one of the three strategies. In the lower half, they have no clear preference and therefore show an inconsistent response pattern. This pattern can be represented by our paradigm."}
-include_graphics(here("06_Paper", "ER-ED", "Revision", "figures", "Paradigm_Scheme_T2.png" ))
+include_graphics(here("06_Paper", "ER-ED", "figures", "Paradigm_Scheme_T2.png" ))
 ```
 
 The aim of the present study is to evaluate whether this paradigm is suitable for determining SVs of ER strategies. 
 As a manipulation check, we first want to investigate whether the valence of the pictures is affecting subjective and physiological responding, resulting in lower subjective arousal ratings after and lower EMG activity during neutral compared to negative pictures.
 Second, we want to check whether the ER strategies distraction, distancing, and suppression effectively reduce subjective arousal and physiological responding compared to the active viewing condition.
 Third, we want to see whether the strategies subjectively require more cognitive effort than the active viewing condition, and whether participants re-apply the for them least effortful strategy. 
-Furthermore, we want to investigate whether subjective effort and arousal ratings, and EMG activity predict individual subjective values of ER strategies.
+Furthermore, we want to investigate whether subjective effort, arousal ratings, subjective utility, and EMG activity predict individual subjective values of ER strategies.
 And lastly, we want to check whether the SV of a strategy is associated with its likelihood of being chosen again, and whether SVs reflect participants' self-reported ER flexibility.
 All hypotheses are detailed in the [design table](#DesignTable).
 Exploratorily, we want to investigate whether individual SVs are related to personality traits and how individual SVs of ER strategies relate to SVs of other tasks with different demand levels, namely *n*-back.
