--- a/06_Paper/ER-ED/TheoreticalBackground.Rmd
+++ b/06_Paper/ER-ED/TheoreticalBackground.Rmd
@@ -66,7 +66,7 @@ It is unclear whether people had clear preferences or whether the choice options
 We assume that people choose the strategy that has the highest value for them at the moment.
 The value is determined against the background of goal achievement in the specific situation: A strategy is highly valued if it facilitates goal achievement[@Aldao2015]. 
 One certainly central goal is the regulation of negative affect.
-A second, intrinsic and less obvious goal is the avoidance of effort[@Inzlicht2018].
+A second, intrinsic, and less obvious goal is the avoidance of effort[@Inzlicht2018].
 When given the choice, most individuals prefer tasks that are less effortful[@Hull1943] and chose strategies that were less effortful[@Scheffel2021].
 We assume that both aspects are traded off against each other by individuals to determine individual subjective values (SVs) of ER strategies: A strategy is more valuable if it can reduce emotional arousal *and* is less effortful.
 In addition, perceived utility should have an impact on SVs. 
