--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -168,6 +168,18 @@ https://onlinelibrary.wiley.com/doi/pdfdirect/10.1002/jts.20271?download=true},
    year = {2007},
 }
 
+@article{Cheval2020,
+   author = {Cheval, B. and Daou, M. and Cabral, D. A. R. and Bacelar, M. F. B. and Parma, J. O. and Forestier, C. and Orsholits, D. and Sander, D. and Boisgontier, M. P. and Miller, M. W.},
+   title = {Higher inhibitory control is required to escape the innate attraction to effort minimization},
+   journal = {Psychology of Sport and Exercise},
+   volume = {51},
+   ISSN = {1469-0292},
+   DOI = {ARTN 101781
+10.1016/j.psychsport.2020.101781},
+   url = {<Go to ISI>://WOS:000579940200031},
+   year = {2020}
+}
+
 @article{Connor2003,
    author = {Connor, K. M. and Davidson, J. R.},
    title = {Development of a new resilience scale: the Connor-Davidson Resilience Scale (CD-RISC)},
@@ -321,6 +333,19 @@ https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1469-8986.1986.tb00676.x?sid=n
    year = {2021}
 }
 
+@article{Gonzalez-Garcia2021,
+   author = {Gonzalez-Garcia, C. and Garcia-Carrion, B. and Lopez-Benitez, R. and Sobrado, A. and Acosta, A. and Ruz, M.},
+   title = {Induced affective states do not modulate effort avoidance},
+   journal = {Psychol Res},
+   volume = {85},
+   number = {3},
+   pages = {1016-1028},
+   ISSN = {1430-2772 (Electronic)
+0340-0727 (Linking)},
+   DOI = {10.1007/s00426-020-01300-9},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/32036442},
+   year = {2021}
+}
 @Article{Greiner2015,
   author     = {Greiner, Ben},
   journal    = {Journal of the Economic Science Association},
@@ -471,6 +496,21 @@ https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6172040/pdf/nihms-989921.pdf},
 https://www.nature.com/articles/nn2007.pdf},
    year = {2007}
 }
+
+@article{Kool2010,
+   author = {Kool, W. and McGuire, J. T. and Rosen, Z. B. and Botvinick, M. M.},
+   title = {Decision making and the avoidance of cognitive demand},
+   journal = {J Exp Psychol Gen},
+   volume = {139},
+   number = {4},
+   pages = {665-82},
+   ISSN = {1939-2222 (Electronic)
+0022-1015 (Linking)},
+   DOI = {10.1037/a0020198},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/20853993},
+   year = {2010}
+}
+
 
 @Article{Kuznetsova2017,
    title = {{lmerTest} Package: Tests in Linear Mixed Effects Models},
