--- a/06_Paper/ER-ED/TheoreticalBackground.Rmd
+++ b/06_Paper/ER-ED/TheoreticalBackground.Rmd
@@ -54,11 +54,6 @@ Research on ER choice has identified numerous factors that influence the choice 
 For example, a study found that the intensity of a stimulus or situation plays a role in the choice[@Sheppes2011]. 
 Higher intensity of the (negative) stimulus lead to a choice of rather disengaging tactics of attentional deployment, like distraction[@Sheppes2011;@Sheppes2014].
 ER choice was further influenced by, among others, extrinsic motivation (e.g., monetary incentives), motivational determinants (i.e., hedonic regulatory goals), and effort[@Sheppes2014;@Scheffel2021].
-With regard to effort, we could show in our previous work that the choice for an ER strategy is mainly influenced by the effort required to implement a given strategy[@Scheffel2021].
-In our study, participants used the strategies distancing and suppression while inspecting emotional pictures.
-Afterwards, they choose which strategy they wanted to use again.
-Participants tended to re-apply the strategy that was subjectively less effortful, even though it was subjectively not the most effective one - in this case: suppression.
-Interestingly, the choice was independent of self-reported habitual use of suppression and reappraisal.
 Nonetheless, there are only few studies to date that examined the required effort of several strategies in more detail and compared them with each other.
 Furthermore, the research on ER choice lacks information regarding the strategies that were *not* chosen in each case.
 It is unclear whether people had clear preferences or whether the choice options were similarly attractive.
@@ -66,9 +61,22 @@ It is unclear whether people had clear preferences or whether the choice options
 We assume that people choose the strategy that has the highest value for them at the moment.
 The value is determined against the background of goal achievement in the specific situation: A strategy is highly valued if it facilitates goal achievement[@Aldao2015]. 
 One certainly central goal is the regulation of negative affect.
+The effectiveness of ER strategies should therefore influence the respective SV.
 A second, intrinsic, and less obvious goal is the avoidance of effort[@Inzlicht2018].
-When given the choice, most individuals prefer tasks that are less effortful[@Hull1943] and chose strategies that were less effortful[@Scheffel2021].
+When given the choice, most individuals prefer tasks that are less effortful[@Hull1943].
+This relatively consistent finding could be demonstrated in various domains, for example in the area of affective science[@Gonzalez-Garcia2021], in the area of executive functions, decision behaviour and cognitive control. 
+
+and chose strategies that were less effortful[@Scheffel2021].
+
+
+With regard to effort, we could show in our previous work that the choice for an ER strategy is mainly influenced by the effort required to implement a given strategy[@Scheffel2021].
+In our study, participants used the strategies distancing and suppression while inspecting emotional pictures.
+Afterwards, they choose which strategy they wanted to use again.
+Participants tended to re-apply the strategy that was subjectively less effortful, even though it was subjectively not the most effective one - in this case: suppression.
+Interestingly, the choice was independent of self-reported habitual use of suppression and reappraisal.
+
 We assume that both aspects are traded off against each other by individuals to determine individual subjective values (SVs) of ER strategies: A strategy is more valuable if it can reduce emotional arousal *and* is less effortful.
+
 In addition, perceived utility should have an impact on SVs. 
 A strategy that is less effortful and can objectively regulate arousal (i.e., is effective), but is not subjectively perceived as useful, should have a low SV.
 Moreover, SVs of ER Strategies could therefore be helpful to describe the ER repertoire[@Aldao2015] more comprehensively.
