worked on reviewer 1.1

--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -511,6 +511,20 @@ https://www.nature.com/articles/nn2007.pdf},
    year = {2010}
 }
 
+@article{Kool2014,
+   author = {Kool, W. and Botvinick, M.},
+   title = {A labor/leisure tradeoff in cognitive control},
+   journal = {J Exp Psychol Gen},
+   volume = {143},
+   number = {1},
+   pages = {131-41},
+   ISSN = {1939-2222 (Electronic)
+0022-1015 (Linking)},
+   DOI = {10.1037/a0031048},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/23230991},
+   year = {2014}
+}
+
 
 @Article{Kuznetsova2017,
    title = {{lmerTest} Package: Tests in Linear Mixed Effects Models},
